--- a/src/components/Toggle/Toggle.css
+++ b/src/components/Toggle/Toggle.css
@@ -4,7 +4,7 @@
 	border-radius: 20px;
 	border: 1px solid #999;
 	position: fixed;
-	top: 10px;
+	top: 15px;
 	right: 10px;
 	z-index: 999999999999999999;
 	display: flex;
